# lppm

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  Makefile  README.md
include/lppm/: cli.h  common.h  globals.h  handlers.h  operation.h  os.h  substitutor.h  template.h  template_info.h  utils.h
src/: cli.cpp  globals.cpp  handlers.cpp  main.cpp  os.cpp  substitutor.cpp  template.cpp  template_info.cpp  utils.cpp
